<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:id="@+id/app_screen"
    tools:context="com.pritz.android.cloudadicmutiutility.WeatherActivity">


    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/camera"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <ImageButton
        android:id="@+id/btn_location"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/location"
        android:background="@android:color/transparent"
        android:layout_marginRight="42dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="33dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/btn_notif"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/notification"
        android:background="@android:color/transparent"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/desc_cam" />

    <ImageButton
        android:id="@+id/btn_weather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/weather"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/desc_location"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/btn_device"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/device_tr"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"

        app:layout_constraintTop_toBottomOf="@+id/desc_notif"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/btn_check_internet"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/internet"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/desc_weather"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/desc_cam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/camera_txt"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/desc_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/location_txt"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/desc_cam"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/desc_notif"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/notif_txt"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_notif" />

    <TextView
        android:id="@+id/desc_weather"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_txt"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/desc_notif"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/desc_device"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/dev_txt"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_device" />
    <TextView
        android:id="@+id/desc_check_internet"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/check_int"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/desc_device"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>

